# OperationStacked/Requests/UpdateUserRequest.cs
@@ -2,7 +2,7 @@
 {
     public class CreateUser
     {
-        public string CognitoUserId { get; set; }
+        public Guid CognitoUserId { get; set; }
         public string UserName { get; set; }
         public int WorkoutDaysInweek { get; set; }
     }
