# OperationStacked/Response/WeekAndDayResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace OperationStacked.Response;
+
+public record WeekAndDayResponse(int Week, int Day);
